[fix] hide scrollbar

--- a/source/css/_layout/sidebar/search.styl
+++ b/source/css/_layout/sidebar/search.styl
@@ -54,6 +54,8 @@
   #search-result
     max-height: 60vh
     overflow: scroll
+    scrollbar-width: none
+    scrollbar(0, 0)
     border-radius: $border-card
     &:empty
       display: none
